eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Teller_Depository_Action__c.object
<CustomObject>
    <fields>
        <fullName>Authorisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Depository_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Denominations__c</fullName>
        <label>Denominations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Authorisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Authorisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Depository_Actions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Function_Name__c</fullName>
        <label>Function Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Authorisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Authorisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Depository_Actions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Teller_Depository__c</fullName>
        <label>Teller Depository</label>
        <referenceTo>Teller_Depository__c</referenceTo>
        <relationshipLabel>Teller Depository Actions</relationshipLabel>
        <relationshipName>Teller_Depository_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Teller Depository Action</label>
    <nameField>
        <label>Teller Depository Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Depository Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>